--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tailwindcss/vite": "^4.1.18",
     "chart.js": "^4.5.1",
     "html-to-image": "^1.11.13",
+    "marked": "^17.0.1",
     "qrcode.vue": "^3.6.0",
     "seedrandom": "^3.0.5",
     "vue": "^3.5.24",
